# BlackHole

./: CMakeLists.txt
.github/workflows/: build-all.yml  build-vst.yml  build.yml
BlackHole.xcodeproj/: project.pbxproj
Scripts/: build-xacliv.sh  build-xacmusic.sh
VST/: CMakeLists.txt  README.md
VST/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
